# C-Server-Go-Client

./: README.md
client/: index.html  main.go
client/static/: index.html
libmicrohttpd-0.9.77-w32-bin/: readme.txt
libmicrohttpd-0.9.77-w32-bin/x86_64/MinGW/static/clang64/lib/pkgconfig/: libmicrohttpd.pc
server/: CMakeLists.txt  Dockerfile  appointments_handlers.c  appointments_handlers.h  cors.c  cors.h  cross.sh  database.c  database.h  docker-compose.yml  doctors_handlers.c  doctors_handlers.h  json_response.c  json_response.h  main.c  medical_records_handlers.c  medical_records_handlers.h  mingw64-toolchain.cmake  patient_handlers.c  patient_handlers.h  run_linux.sh  run_windows.ps1
server/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
server/libmicrohttpd-0.9.77-w32-bin/x86_64/MinGW/shared/ucrt64/lib/pkgconfig/: libmicrohttpd.pc
server/libs/windows/libmicrohttpd-0.9.77-w32-bin/x86/MinGW/static-xp/mingw32/lib/pkgconfig/: libmicrohttpd.pc
